package com.chef.foody.util

object TEST_TAG {
    const val CHEF_BUTTON_CLICK = "chef_button_click"
    const val COOK_BUTTON_CLICK = "cook_button_click"
    const val LOGIN_BUTTON_CLICK = "login_button_click"
    const val LOGIN_SCREEN_REGISTER_BUTTON_CLICK = "login_register_register_button_click"
    const val REGISTER_BUTTON_CLICK = "register_button_click"
    const val ORDER_FOOD_BUTTON_CLICK = "order_food_button_click"
    const val PERSONAL_CHEF_BUTTON_CLICK = "personal_chef_button_click"
    const val QUANTITY_INCREASE_BUTTON_CLICK= "quantity_increase_button_click"
    const val QUANTITY_DECREASE_BUTTON_CLICK = "quantity_decrease_button_click"
    const val ADD_TO_CART_BUTTON_CLICK = "add_to_cart_button_click"
    const val VIEW_CART_BUTTON_CLICKED = "view_cart_button_click"
    const val PROCEED_TO_FIND_ORDERS_BUTTON_CLICKED = "proceed_to_find_orders_button_click"
    const val FOOD_ORDER_LIST_LAZY_COLUMN = "food_order_list_lazy_column"
    const val FIND_A_CHEF_WITH_NOTE_BUTTON_CLICK = "find_a_chef_with_note_button_click"
    const val NOTE_TO_CHEF_TEXT_FIELD = "note_to_chef_text_field"
    const val CHEF_FILE_UPLOAD_BUTTON = "chef_file_upload_button"
    const val PROFILE_SCREEN_ICON_CLICKED = "profile_screen_icon_clicked"
    const val PROFILE_ADDRESS_UPDATE_BUTTON = "profile_address_update_button"
    const val PROFILE_EMAIL_TEXT = "profile_email_text"
}